--- a/r5net/r5net.vcxproj
+++ b/r5net/r5net.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\netpch.h" />
-    <ClInclude Include="include\r5net.h" />
+    <ClInclude Include="include\r5\r5net.h" />
     <ClInclude Include="include\serverlisting.h" />
   </ItemGroup>
   <ItemGroup>
@@ -91,14 +91,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)lib\$(Configuration)</OutDir>
-    <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)</IntDir>
+    <OutDir>$(ProjectDir)lib\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
     <IncludePath>$(SolutionDir)shared\include;$(ProjectDir)include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)lib\$(Configuration)</OutDir>
-    <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)</IntDir>
+    <OutDir>$(ProjectDir)lib\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
     <IncludePath>$(SolutionDir)shared\include;$(ProjectDir)include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
