--- a/r5dev/r5dev.vcxproj.filters
+++ b/r5dev/r5dev.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="src\hooks\cbasefilesystem.cpp">
       <Filter>hooks\src\cbasefilesystem</Filter>
     </ClCompile>
+    <ClCompile Include="src\hooks\netchannel.cpp">
+      <Filter>hooks\src\netchannel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\external\imgui\include\imgui_impl_win32.h">
