I didn't sleep for this shit
It's not worth it...

--- a/r5dedicated/r5dedicated.vcxproj
+++ b/r5dedicated/r5dedicated.vcxproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <ClCompile Include="..\shared\utility.cpp" />
     <ClCompile Include="console.cpp" />
+    <ClCompile Include="dedi.cc" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="hooks.cpp" />
     <ClCompile Include="iconvar.cpp" />
