--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -151,7 +151,7 @@
       <AdditionalDependencies>Minhook.x64.lib;r5net.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>del $(SolutionDir)bin\$(Configuration)\r5dev.dll
+      <Command>del "$(SolutionDir)bin\$(Configuration)\r5dev.dll"
 rename "$(TargetPath)" "r5dev.dll"</Command>
     </PostBuildEvent>
     <PreBuildEvent>
