Read description for changes!
* Parsing playlist from keyvalues now.
* When hosting a server it will ask for a playlist to be chosen.
* Load playlist on demand into memory.
* Load playlist from disk.
* Added LoadPlaylist hook to clear the MapVPKCache that causes crashes with launchplaylist concommand
* KeyValues class is useable now.

--- a/r5dev/r5dev.vcxproj.filters
+++ b/r5dev/r5dev.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="src\hooks\netchannel.cpp">
       <Filter>hooks\src\netchannel</Filter>
     </ClCompile>
+    <ClCompile Include="src\hooks\loadplaylist.cpp">
+      <Filter>hooks\src\other</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\external\imgui\include\imgui_impl_win32.h">
