First work-in-progress dedicated implementation
Based on MrSteyk's dedicated patch.
Additional patches targets the disabling of the client.dll library and VGUI. The disabling of the client.dll library initialization caused several issues to be investigated still (currently loops fine in _Host_RunFrame()). but executing a map command currently makes it only load the mp_common VPK before getting stuck somewhere. Setting hoststate to a valid map with HS_NEW_GAME (manually) does something to the engine but does not force the server to load anything yet.

Added enums and classes from r5dev project.

--- a/r5dedicated/r5dedicated.vcxproj
+++ b/r5dedicated/r5dedicated.vcxproj
@@ -185,7 +185,9 @@
   <ItemGroup>
     <ClCompile Include="..\shared\utility.cpp" />
     <ClCompile Include="console.cpp" />
+    <ClCompile Include="csourceappsystemgroup.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="gameclasses.cpp" />
     <ClCompile Include="hooks.cpp" />
     <ClCompile Include="iconvar.cpp" />
     <ClCompile Include="msgbox.cpp" />
@@ -300,6 +302,8 @@
     <ClInclude Include="..\shared\include\utility.h" />
     <ClInclude Include="console.h" />
     <ClInclude Include="dllmain.h" />
+    <ClInclude Include="enums.h" />
+    <ClInclude Include="gameclasses.h" />
     <ClInclude Include="hooks.h" />
     <ClInclude Include="opcodes.h" />
     <ClInclude Include="pch.h" />
