--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -327,6 +327,7 @@ if not EXIST $(SolutionDir)r5net\lib\$(Configuration)\r5net.lib (
     <ClInclude Include="include\id3dx.h" />
     <ClInclude Include="include\imgui_stdlib.h" />
     <ClInclude Include="include\input.h" />
+    <ClInclude Include="include\logsystem.h" />
     <ClInclude Include="include\opcptc.h" />
     <ClInclude Include="include\CGameConsole.h" />
     <ClInclude Include="include\patterns.h" />
@@ -371,6 +372,7 @@ if not EXIST $(SolutionDir)r5net\lib\$(Configuration)\r5net.lib (
     </ClCompile>
     <ClCompile Include="..\shared\utility.cpp" />
     <ClCompile Include="src\CCompanion.cpp" />
+    <ClCompile Include="src\cfpspanel.cpp" />
     <ClCompile Include="src\console.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
@@ -406,6 +408,7 @@ if not EXIST $(SolutionDir)r5net\lib\$(Configuration)\r5net.lib (
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="src\gui_utility.cpp" />
+    <ClCompile Include="src\logsystem.cpp" />
     <ClCompile Include="src\opcptc.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
