--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -372,7 +372,7 @@ if not EXIST $(SolutionDir)r5net\lib\$(Configuration)\r5net.lib (
     </ClCompile>
     <ClCompile Include="..\shared\utility.cpp" />
     <ClCompile Include="src\CCompanion.cpp" />
-    <ClCompile Include="src\cfpspanel.cpp" />
+    <ClCompile Include="src\cenginevgui.cpp" />
     <ClCompile Include="src\console.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
