origin sdk, throw error if originsdk failed.

--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -385,7 +385,6 @@ if not EXIST $(SolutionDir)r5net\lib\$(Configuration)\r5net.lib (
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="src\hooks\cbasefilesystem.cpp" />
     <ClCompile Include="src\hooks\chlclient.cpp" />
     <ClCompile Include="src\hooks\connectclient.cpp" />
     <ClCompile Include="src\hooks\cvengineserver.cpp" />
@@ -397,6 +396,7 @@ if not EXIST $(SolutionDir)r5net\lib\$(Configuration)\r5net.lib (
     <ClCompile Include="src\hooks\msgbox.cpp" />
     <ClCompile Include="src\hooks\net.cpp" />
     <ClCompile Include="src\hooks\netchannel.cpp" />
+    <ClCompile Include="src\hooks\originsdk.cpp" />
     <ClCompile Include="src\hooks\sqvm.cpp" />
     <ClCompile Include="src\hooks\winapi.cpp" />
     <ClCompile Include="src\id3dx.cpp">
