Added backbone and some of the routes for r5net-ms (now Pylon) interactions

--- a/r5dev/r5dev.vcxproj.filters
+++ b/r5dev/r5dev.vcxproj.filters
@@ -156,9 +156,6 @@
     <ClCompile Include="engine\baseclientstate.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
-    <ClCompile Include="gameui\IBrowser.cpp">
-      <Filter>sdk\gameui</Filter>
-    </ClCompile>
     <ClCompile Include="gameui\IConsole.cpp">
       <Filter>sdk\gameui</Filter>
     </ClCompile>
@@ -340,9 +337,6 @@
     </ClInclude>
     <ClInclude Include="engine\baseclient.h">
       <Filter>sdk\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="gameui\IBrowser.h">
-      <Filter>sdk\gameui</Filter>
     </ClInclude>
     <ClInclude Include="gameui\IConsole.h">
       <Filter>sdk\gameui</Filter>
@@ -788,9 +782,6 @@
     <ClInclude Include="networksystem\r5net.h">
       <Filter>sdk\networksystem</Filter>
     </ClInclude>
-    <ClInclude Include="networksystem\serverlisting.h">
-      <Filter>sdk\networksystem</Filter>
-    </ClInclude>
     <ClInclude Include="mathlib\parallel_for.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
@@ -838,6 +829,9 @@
     </ClInclude>
     <ClInclude Include="engine\host_cmd.h">
       <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="networksystem\net_structs.h">
+      <Filter>sdk\networksystem</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
