--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="engine\sys_dll2.cpp" />
     <ClCompile Include="engine\sys_utils.cpp" />
     <ClCompile Include="gameui\IConsole.cpp" />
+    <ClCompile Include="IDevPallete.cpp" />
     <ClCompile Include="inputsystem\inputsystem.cpp" />
     <ClCompile Include="launcher\IApplication.cpp" />
     <ClCompile Include="mathlib\adler32.cpp" />
@@ -131,6 +132,7 @@
     <ClInclude Include="engine\sys_dll2.h" />
     <ClInclude Include="engine\sys_utils.h" />
     <ClInclude Include="gameui\IConsole.h" />
+    <ClInclude Include="IDevPalette.h" />
     <ClInclude Include="inputsystem\ButtonCode.h" />
     <ClInclude Include="inputsystem\inputsystem.h" />
     <ClInclude Include="launcher\IApplication.h" />
